# L-Systems

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/l_systems/: __main__.py  main.py
src/l_systems/config/: constants.py  settings.py
src/l_systems/core/: grammar.py  presets.py
src/l_systems/renderer/: turtle_renderer.py
tests/: test_grammar.py  test_presets.py  test_turtle_renderer.py
